@@ -1,5 +1,5 @@
 package="tvstreamrecord"
-version="0.4.5"
+version="0.4.6"
 maintainer="Pavion"
 description="Program to record TV streams. Python 2.x required. Server runs at port 8030 (changeable)"
 reloadui="yes"
